--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^4.1.0",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0",
+    "nprogress": "^0.2.0",
+    "qs": "^6.9.4",
+    "vant": "^2.0.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -17,8 +25,12 @@
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "babel-plugin-import": "^1.13.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "lib-flexible": "^0.3.2",
+    "postcss-pxtorem": "^5.1.1",
+    "vue-cli-plugin-vant": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
