--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "echarts": "^4.8.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
-    "nprogress": "^0.2.0",
+    "normalize.css": "^8.0.1",
     "qs": "^6.9.4",
     "vant": "^2.0.5",
     "vue": "^2.6.11",
